[package]
name = "ping_api_client"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"
ping-rs = "0.1.2"
ini = "1.3.0"
chrono = "0.4.39"
hostname = "0.4.0"
reqwest = "0.11"
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.12.1", features = [ "v4", "fast-rng" ] }